--- a/HW05/Cargo.toml
+++ b/HW05/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "lab01"
+name = "HW05"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-assert_cmd = "2"
-
