--- a/Rust_HW06/Cargo.toml
+++ b/Rust_HW06/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "lab01"
+name = "Rust_HW06"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8"
 assert_cmd = "2"
-
