--- a/lab9/Cargo.toml
+++ b/lab9/Cargo.toml
@@ -1,10 +1,15 @@
 [package]
-name = "Rust_HW06"
+name = "lab9"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8"
 assert_cmd = "2"
+predicates = "2"
+rand = "0.8"
+clap = "2.33"
+csv = "1"
+
+
