--- a/SysMonitor/Cargo.toml
+++ b/SysMonitor/Cargo.toml
@@ -14,5 +14,5 @@ termion = "1.5"
 tui = { version = "0.19", default-features = false, features = ['termion'] }
 rand = "0.8"
 procfs = "0.6"
-clap = "2.33"
+clap = {version="4.4.6", features= ["derive"]}
 plotters = "0.3.5"
